# backend/app/Models/AuditLog.php
@@ -4,6 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Support\Str;
 
 class AuditLog extends Model
@@ -11,6 +12,11 @@ class AuditLog extends Model
     use HasFactory;
 
     protected $guarded = ["id"];
+
+    public function user(): BelongsTo
+    {
+        return $this->belongsTo(User::class, "log_creator");
+    }
 
 
     /**
